# sps_genai

./: .gitignore  Dockerfile  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  qa_data.jsonl  requirements.txt  rl_train_gpt2_format.py  test_file.py  train_cifar10.py  train_gpt2_qa.py  train_gpt2_rl.py
app/: bigram_model.py  classifier.py  cnn_model.py  embedding_model.py  main.py
app/Anomaly detection/: Modern Time Series Assignment.ipynb
helper_lib/: __init__.py  data_loader.py  diffusion.py  ebm.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
